--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "cros": "^1.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.2",
