--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.3",
+    "spinners-react": "^1.0.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
